<resources>
    <string name="app_name">Agenda App</string>
    <string name="name_of_establishment">Name of Establishment</string>
    <string name="street_avenue_neighborhood">Street/Avenue - Neighborhood</string>
    <string name="call_this_establishment">Call this Establishment</string>
    <string name="find_on_maps">Find on maps</string>
    <string name="back">Back</string>
    <string name="establishment_schedule">Establishment Schedule</string>
    <string name="add_establishment">"Establishment Add "</string>
    <string name="filter_by_name">Filter by Name</string>
    <string name="save_establishment">Save Establishment</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
</resources>